<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/card_vertical_padding"
    android:paddingLeft="@dimen/card_horizontal_padding"
    android:paddingRight="@dimen/card_horizontal_padding"
    android:paddingTop="@dimen/card_vertical_padding" >

    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="@dimen/main_content_width"
        android:layout_height="@dimen/main_content_height"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/photographerConnectedBluetoothDeviceNameLabelTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/photographer_connected_bluetooth_device_label" />

        <TextView
            android:id="@+id/photographerReceivedDataValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/photographerReceivedDataLabelTextView"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/photographerReceivedDataLabelTextView"
            android:text="@string/photographer_received_data_value_none" />

        <TextView
            android:id="@+id/photographerReceivedDataOnValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/photographerReceivedDataValueTextView"
            android:layout_below="@+id/photographerReceivedDataValueTextView"
            android:text="@string/photographer_received_data_on_none" />

        <TextView
            android:id="@+id/photographerConnectedBluetoothDeviceNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/photographerConnectedBluetoothDeviceNameLabelTextview"
            android:layout_alignBottom="@+id/photographerConnectedBluetoothDeviceNameLabelTextview"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/photographerConnectedBluetoothDeviceNameLabelTextview"
            android:text="@string/photographer_connected_bluetooth_device_name_default" />

        <TextView
            android:id="@+id/photographerConnectedBluetoothDeviceAddressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/photographerConnectedBluetoothDeviceNameTextView"
            android:layout_below="@+id/photographerConnectedBluetoothDeviceNameTextView"
            android:text="@string/photographer_connected_bluetooth_device_address_default" />

        <TextView
            android:id="@+id/photographerReceivedDataLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/photographerConnectedBluetoothDeviceAddressTextView"
            android:layout_marginTop="10dp"
            android:text="@string/photographer_received_data_label" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="@dimen/footer_width"
        android:layout_height="@dimen/footer_height"
        android:layout_below="@id/mainContent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical|center_horizontal" >

            <ImageView
                android:id="@+id/footerIconImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera_50" />

            <TextView
                android:id="@+id/footerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/footer"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
