<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/left_column"
        android:layout_width="@dimen/glass_card_left_column_width"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/glass_card_left_column_mergin"
        android:layout_marginTop="@dimen/glass_card_left_column_mergin"
        android:layout_marginLeft="@dimen/glass_card_left_column_mergin"
        android:background="@color/dark_gray" >

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_camera_70" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/glass_card_body_height"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/glass_card_margin"
        android:layout_marginLeft="@dimen/glass_card_two_column_margin"
        android:layout_toRightOf="@+id/left_column"
        tools:ignore="UselessLeaf" >

        <TextView
            android:id="@+id/shutterCommandBroadcastReceiverStateLabelTtextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/shutter_command_broadcast_receiver_state_label" />

        <TextView
            android:id="@+id/shutterCommandBroadcastReceiverStateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/shutterCommandBroadcastReceiverStateLabelTtextView"
            android:text="@string/shutter_command_broadcast_receiver_state_off" />

        <TextView
            android:id="@+id/shutterCommandBroadcastReceiverSinceLableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/shutterCommandBroadcastReceiverStateTextView"
            android:text="@string/shutter_command_broadcast_receiver_since_label" />

        <TextView
            android:id="@+id/shutterCommandBroadcastReceiverSinceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/shutterCommandBroadcastReceiverSinceLableTextView"
            android:text="@string/shutter_command_broadcast_receiver_since_blank" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/footer_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|left"
        android:layout_marginBottom="@dimen/glass_card_footer_margin"
        android:layout_marginRight="@dimen/glass_card_margin"
        android:layout_marginLeft="@dimen/glass_card_two_column_margin"
        android:layout_toRightOf="@+id/left_column"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/footer"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/footerTapForMenu"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</RelativeLayout>
